feat: Adding shadcn
